Routeando y linkeando fake API

--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,1 +1,16 @@
+.ItemList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 25px;
+  margin: 35px;
+}
 
+.ItemList .ItemLink {
+  transition: 3s;
+  height: fit-content;
+}
+
+.ItemList .ItemLink .MuiPaper-root:hover {
+  opacity: 80%;
+  width: 99%;
+}
