--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -97,3 +97,23 @@ h1 {
   width: 50px;
   height: 50px;
 }
+
+.btnCheckout {
+  background-color: #008cba; /* Azul */
+  border: 2px solid black; /* Borde blanco */
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.btnCheckout:hover {
+  background-color: white; /* Blanco */
+  color: #008cba; /* Azul */
+  border: 2px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+}
